--- a/sass/utilities/_mixins-complete.scss
+++ b/sass/utilities/_mixins-complete.scss
@@ -131,3 +131,9 @@ $font-scale-l: 1.25;
     object-fit: $fit;
   }
 }
+
+@mixin bgImage($size: cover, $position: center) {
+  background-size: $size;
+  background-position: $position;
+  background-repeat: no-repeat;
+}
